--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">AndroidAssignments</string>
-    <string name="hello_message">vanakam!</string>
+    <string name="hello_message">வணக்கம்!</string>
     <string name="ButtonText">I\’m a button</string>
 </resources>
