--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -3,4 +3,6 @@
     <string name="app_name">AndroidAssignments</string>
     <string name="hello_message">வணக்கம்!</string>
     <string name="ButtonText">I\’m a button</string>
+    <string name="LoginText">Login</string>
+    <string name="LoginNameText">Login Name</string>
 </resources>
