Finished Assignment2Part4

--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -10,10 +10,14 @@
     <string name="RadioButton">ரேடியோ பட்டன்</string>
     <string name="CheckBox">தேர்வுப்பெட்டி</string>
     <string name="Whatdoesthisdo">இது என்ன செய்கிறது</string>
-    <string name="ListItemsButton">தேவையான பொருட்கள்</string>
+    <string name="ListItemsButton">பொருட்கள்</string>
     <string name="Click_Login">உள்ளே நுழைய</string>
     <string name="backtohome">வெளியே போ</string>
     <string name="backtohomee">வெளியே போ</string>
+    <string name="StartChat">தொடங்கு</string>
+    <string name="SendBtn">அனுப்பு</string>
+    <string name="StartChatBtn">எழுது</string>
+
 
     <string name="loginsuccessful">உள்நுழைவு வெற்றி</string>
     <string name="notvalid">செல்லுபடியாகாது</string>
